[package]
name = "tokio-xmpp"
version = "0.1.1"
authors = ["Astro <astro@spaceboyz.net>"]
description = "Asynchronous XMPP for Rust with tokio"
license = "MPL-2.0"
homepage = "https://github.com/astro/tokio-xmpp"
repository = "https://github.com/astro/tokio-xmpp"
documentation = "https://docs.rs/tokio-xmpp"

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
bytes = "0.4.9"
xml5ever = "0.12"
tendril = "0.4"
minidom = "0.9"
# TODO: update to 0.2.0
native-tls = "0.1"
tokio-tls = "0.1"
sasl = "0.4"
rustc-serialize = "0.3"
jid = { version = "0.5", features = ["minidom"] }
domain = "0.2"
xmpp-parsers = "0.10"
idna = "0.1"
try_from = "0.2"
sha-1 = "0.7"
quick-xml = "0.12"
