[package]
name = "tokio-xmpp"
version = "0.1.2"
authors = ["Astro <astro@spaceboyz.net>", "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>", "pep <pep+code@bouah.net>"]
description = "Asynchronous XMPP for Rust with tokio"
license = "MPL-2.0"
homepage = "https://github.com/astro/tokio-xmpp"
repository = "https://github.com/astro/tokio-xmpp"
documentation = "https://docs.rs/tokio-xmpp"
categories = ["asynchronous", "network-programming"]
keywords = ["xmpp", "tokio"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
bytes = "0.4.9"
xml5ever = "0.12"
minidom = "0.9"
# TODO: update to 0.2.0
native-tls = "0.1"
tokio-tls = "0.1"
sasl = "0.4"
jid = { version = "0.5", features = ["minidom"] }
domain = "0.2"
xmpp-parsers = "0.11"
idna = "0.1"
try_from = "0.2"
quick-xml = "0.12"
derive-error = "0.0.4"
